# demo-platform

./: .env  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  link_site_packages.sh  pyproject.toml  run_controller_docker.sh  run_setup_docker.sh
data/: ADL-Rundle-6  KITTI  README.md  TUD-Campus  download_tracking.sh  nuScenes  tracking
jumpstreet/: __init__.py  acquire.py  broker.py  buffer.py  calibrate.py  client.py  config.json  context.py  controller.py  detection.py  display.py  messages.py  muxer.py  newbroker.py  object_detection.py  object_tracking.py  pipeline.py  receiver.py  replay.py  sample_pub.py  sample_sub.py  sensor.py  sensor_replay.py  tracking.py  trigger.py  utils.py  worker.py
jumpstreet/api/: process_manager.py  replayer.py
jumpstreet/configs/broker/: default.yml
jumpstreet/configs/controller/: camera.yml  desktop_camera.yml  jetson_camera.yml  radar.yml
jumpstreet/configs/detection/: camera.yml  default.yml  desktop_camera.yml  jetson_camera.yml  lightweight_camera.yml  radar.yml
jumpstreet/configs/display/: default.yml
jumpstreet/configs/frontend/: default.yml
jumpstreet/configs/sensors/: FLIR-BFS-50S50C.yml  MOT15-replay.yml  TI-1443-radar.yml  carla-camera-replay.yml  kitti-camera-replay.yml  nuScenes-camera-replay.yml
jumpstreet/configs/tracking/: camera.yml  default.yml  radar.yml
jumpstreet/controllers/: __init__.py  base.py  demo_platform.py
jumpstreet/display/: __init__.py  base.py  simple.py
jumpstreet/frontend/: dummy.py  pvc.py  simple.py
jumpstreet/sensors/: __init__.py  base.py  camera.py  flir_bfs.py  radar.py  raspberry_pi.py  rpi_basic.py  run.py  sensor.py
notebooks/: test-detection-and-tracking.ipynb
scripts/: client.py  pipeline.py  test_rpigige_client.py  worker.py
tests/: test_buffer.py  test_context.py  test_replayer.py  test_utils.py
